First attempt at getting the post content

--- a/assets/javascripts/discourse/templates/composerHelp.js.handlebars
+++ b/assets/javascripts/discourse/templates/composerHelp.js.handlebars
@@ -1,3 +1,9 @@
 <div class="modal-body composerHelp-modal" style="overflow: visible">
-
+    {{#if loadingTags}}
+        loading...
+    {{else }}
+        {{#view Discourse.ComposerHelpContentView model=this}}
+            {{view.content}}
+        {{/view}}
+    {{/if}}
 </div>
