Finish the composer help plugin

--- a/assets/javascripts/discourse/templates/composerHelp.js.handlebars
+++ b/assets/javascripts/discourse/templates/composerHelp.js.handlebars
@@ -3,7 +3,7 @@
         loading...
     {{else }}
         {{#view Discourse.ComposerHelpContentView model=this}}
-            {{view.content}}
+            {{{view.parsedContent}}}
         {{/view}}
     {{/if}}
 </div>
