--- a/assets/stylesheets/composerHelp.scss
+++ b/assets/stylesheets/composerHelp.scss
@@ -1,6 +1,5 @@
 .composerHelp-modal {
-
-  .composer-help-content {
+  .composerHelp-content {
     max-height: 350px;
     min-height: 200px;
     overflow-y: scroll;
