Translate "loading" string

--- a/assets/javascripts/discourse/templates/composerHelp.js.handlebars
+++ b/assets/javascripts/discourse/templates/composerHelp.js.handlebars
@@ -1,6 +1,6 @@
 <div class="modal-body composerHelp-modal" style="overflow: visible">
     {{#if loadingTags}}
-        loading...
+        {{i18n loading}}
     {{else }}
         <div class="composerHelp-content">
             {{#view Discourse.ComposerHelpContentView model=this}}
