--- a/assets/javascripts/discourse/templates/composerHelp.js.handlebars
+++ b/assets/javascripts/discourse/templates/composerHelp.js.handlebars
@@ -3,9 +3,7 @@
         {{i18n loading}}
     {{else }}
         <div class="composerHelp-content">
-            {{#view Discourse.ComposerHelpContentView model=this}}
-                {{{view.parsedContent}}}
-            {{/view}}
+            {{composer-help-content model=this}}
         </div>
     {{/if}}
 </div>
