First attempt at converting the composer-help to es6

--- a/assets/javascripts/discourse/templates/composer-help.js.handlebars
+++ b/assets/javascripts/discourse/templates/composer-help.js.handlebars
@@ -1,8 +1,8 @@
-<div class="modal-body composerHelp-modal" style="overflow: visible">
+<div class="modal-body composer-help-modal" style="overflow: visible">
     {{#if loadingTags}}
         {{i18n loading}}
     {{else }}
-        <div class="composerHelp-content">
+        <div class="composer-help-content">
             {{composer-help-content model=this}}
         </div>
     {{/if}}
