--- a/assets/stylesheets/composer-help.scss
+++ b/assets/stylesheets/composer-help.scss
@@ -1,5 +1,5 @@
-.composerHelp-modal {
-  .composerHelp-content {
+.composer-help-modal {
+  .composer-help-content {
     max-height: 350px;
     min-height: 200px;
     overflow-y: scroll;
